to do app complete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <main class="section">
         <div class="container">
+            <div class="name">Chandra Kamal Singh</div>
             <div class="section-header">
                 <h2>TO DO LIST</h2>
                 <img src="images/icon.png" alt="to do list icon">
